# vci_extension

./: .gitignore  CMakeLists.txt  main.cpp
include/: Camera.h  FrameSaver.h
src/: Camera.cpp  FrameSaver.cpp
